Fix overflow

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 *{
     margin: 0%;
     padding: 0;
-
 }
 
 body {
@@ -10,6 +9,7 @@ body {
     height: 100vh;
     width: 100vw;
     flex: 1;
+    overflow-x: hidden;
 }
 
 /* Section 1 */
@@ -165,6 +165,7 @@ body {
 .section3 {
     background-color: #e5e7eb;
     padding: 64px 0px;
+    width: 100%;
 }
 
 .quote {
